--- a/travel-info.html
+++ b/travel-info.html
@@ -11,8 +11,16 @@ There are three airports that serve the Bay Area: Oakland (OAK, 10 miles from do
 
 <h3>Where to Stay</h3>
 
-We don't have a hotel block. Most large brands have hotels in Emeryville and in downtown Oakland. There are also a number of Airbnb and VRBOs available in the area. If you're planning to rent a car, check parking fees, since they may be steep at some hotels.
+Most large hotel brands have sites in Emeryville and in downtown Oakland, but we don't have a room block anywhere. There are also a number of Airbnb and VRBOs available in the area. If you're planning to rent a car, check parking fees, since they may be steep at some hotels.
 
 <h3>Transportation</h3>
 
-SFO and OAK both connect to <a href="https://www.bart.gov/guide/airport/sfo">BART</a>, the regional heavy rail system, which covers parts of Oakland, Berkeley, and San Francisco. Chabot Space and Science Center is only accessible by car and has an ample parking garage. We recommend either renting a car, taking a taxi, or using a ride-sharing service like Lyft. We've found them to be pretty reliable, even in the evenings.
+SFO and OAK both connect to <a href="https://www.bart.gov/guide/airport/sfo">BART</a>, the regional heavy rail system, which covers parts of Oakland, Berkeley, and San Francisco. Chabot Space and Science Center is only accessible by car and has an ample parking garage. We recommend either renting a car (either from the airport or a place in town), taking a taxi, or using a ride-sharing service like Lyft. We've found them to be pretty reliable, even in the evenings.
+
+<h3>Things to Do</h3>
+
+There's a lot to do in <a href="visitoakland.com">Oakland</a>, <a href="visitberkeley.com">Berkeley</a>, and <a href="sftravel.com">San Francisco</a>. Some particular favorites of ours:
+<ul>
+<li> Regional Parks: There are some parks with great hiking and views in Berkeley and Oakland. The venue is nestled between several (Joaquin Miller, Reinhardt Redwood, and Roberts). Tilden in Berkeley is another favorite of ours.
+<li> Farmers Markets: There's a market at the Ferry Building in San Francisco on Saturday mornings, and one in the Temescal neighborhood in Oakland on Sundays. The stone fruit and berries are fantastic this time of year, and many stands pass out samples.
+</ul>
