--- a/index.html
+++ b/index.html
@@ -3,4 +3,15 @@ layout: index
 title: Home
 ---
 
+We're so excited to share our wedding with you. 
 
+<iframe
+  width="600"
+  height="450"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen
+  referrerpolicy="no-referrer-when-downgrade"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAs5lmyA928x83a0FJ5InkCyS-tm20uhII
+    &q=Chabot+Space+and+Science+Center+Oakland+CA">
+</iframe>
