--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 ---
 layout: index
 title: Home
+sidebar_link: True
+sidebar_sort_order: 1
 ---
 
-We're so excited to share our wedding with you. 
 
-<iframe
-  width="600"
-  height="450"
-  style="border:0"
-  loading="lazy"
-  allowfullscreen
-  referrerpolicy="no-referrer-when-downgrade"
-  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAs5lmyA928x83a0FJ5InkCyS-tm20uhII
-    &q=Chabot+Space+and+Science+Center+Oakland+CA">
-</iframe>
+Welcome to the website for Hannah Klion and Allison Kong's wedding, on July 1, 2023.
+We're so excited to celebrate with you!
+
