--- a/rsvp.html
+++ b/rsvp.html
@@ -3,9 +3,10 @@ layout: page
 title: RSVP
 permalink: /rsvp
 sidebar_link: True
+sidebar_sort_order: 4
 ---
 
-Please reply by June 1 and contact Hannah (hannah.klion [at] gmail.com) if you encounter any issues with the system.
+Please reply by June 5 and contact Hannah (hannah.klion [at] gmail.com) if you encounter any issues with the system.
 
 <iframe style="display:block;width:100%;height:100%;border:none;overflow:hidden;"
           src="https://hannah-allison.anrsvp.com/?embed=true">
