--- a/travel-info.html
+++ b/travel-info.html
@@ -3,6 +3,7 @@ layout: page
 title: Travel Information
 permalink: /travel-info
 sidebar_link: True
+sidebar_sort_order: 3
 ---
 
 <h3>Getting to the Bay Area</h3>
@@ -22,5 +23,5 @@ SFO and OAK both connect to <a href="https://www.bart.gov/guide/airport/sfo">BAR
 There's a lot to do in <a href="visitoakland.com">Oakland</a>, <a href="visitberkeley.com">Berkeley</a>, and <a href="sftravel.com">San Francisco</a>. Some particular favorites of ours:
 <ul>
 <li> Regional Parks: There are some parks with great hiking and views in Berkeley and Oakland. The venue is nestled between several (Joaquin Miller, Reinhardt Redwood, and Roberts). Tilden in Berkeley is another favorite of ours.
-<li> Farmers Markets: There's a market at the Ferry Building in San Francisco on Saturday mornings, and one in the Temescal neighborhood in Oakland on Sundays. The stone fruit and berries are fantastic this time of year, and many stands pass out samples.
+<li> Farmers' Markets: There's a market at the Ferry Building in San Francisco on Saturday mornings, and one in the Temescal neighborhood in Oakland on Sundays. The stone fruit and berries are fantastic this time of year, and many stands pass out samples.
 </ul>
