--- a/event-details.html
+++ b/event-details.html
@@ -3,9 +3,26 @@ layout: page
 title: Schedule and Details
 permalink: /schedule
 sidebar_link: True
+sidebar_sort_order: 2
 ---
 
 All of the evening's events will take place in the outdoor courtyard of <a href="https://chabotspace.org/">Chabot Space and Science Center</a>, a science center and museum located in the Oakland hills. The ceremony will begin at 6:30 pm. Afterwards, please join us for a cocktail hour and reception. Cocktail attire is requested.
 
 <p></p>
+<p>In the (unlikely) event of rain or other inclement weather, we will move everything inside the museum. Chabot is 1,500 feet above sea level, so its weather tends to be cooler and foggier than the flat portions of the city. The weather will cool as the evening goes on, so we recommend bringing an extra layer.</p>
+
+<p></p>
 <p>Chabot hosts <a href="https://chabotspace.org/events/free-telescope-viewings/">public telescope viewings</a> every Saturday evening until 10:30 pm. After dinner, you're welcome to visit the upstairs Observatory Deck to (hopefully!) see views of the Bay and stars.</p>
+
+<h3>Map</p>
+
+<iframe
+  width="600"
+  height="450"
+  style="border:0"
+  loading="lazy"
+  allowfullscreen
+  referrerpolicy="no-referrer-when-downgrade"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAs5lmyA928x83a0FJ5InkCyS-tm20uhII
+    &q=Chabot+Space+and+Science+Center+Oakland+CA">
+</iframe>
