fix broken links

--- a/travel-info.html
+++ b/travel-info.html
@@ -20,8 +20,8 @@ SFO and OAK both connect to <a href="https://www.bart.gov/guide/airport/sfo" tar
 
 <h3>Things to Do</h3>
 
-There's a lot to do in <a href="visitoakland.com" target="_blank">Oakland</a>, <a href="visitberkeley.com" target="_blank">Berkeley</a>, and <a href="sftravel.com" target="_blank">San Francisco</a>. Some particular favorites of ours:
+There's a lot to do in <a href="https://www.visitoakland.com" target="_blank">Oakland</a>, <a href="https://www.visitberkeley.com" target="_blank">Berkeley</a>, and <a href="https://www.sftravel.com" target="_blank">San Francisco</a>. Some particular favorites of ours:
 <ul>
-<li> Regional Parks: There are some parks with great hiking and views in Berkeley and Oakland. The venue is nestled between several (Joaquin Miller, Reinhardt Redwood, and Roberts). Tilden in Berkeley is another favorite of ours.
-<li> Farmers' Markets: There's a market at the Ferry Building in San Francisco on Saturday mornings, and one in the Temescal neighborhood in Oakland on Sundays. The stone fruit and berries are fantastic this time of year, and many stands pass out samples.
+  <li>Regional Parks: There are some parks with great hiking and views in Berkeley and Oakland. The venue is nestled between several (Joaquin Miller, Reinhardt Redwood, and Roberts). Tilden in Berkeley is another favorite of ours.</li>
+  <li>Farmers' Markets: There's a market at the Ferry Building in San Francisco on Saturday mornings, and one in the Temescal neighborhood in Oakland on Sundays. The stone fruit and berries are fantastic this time of year, and many stands pass out samples.</li>
 </ul>
