--- a/event-details.html
+++ b/event-details.html
@@ -16,10 +16,7 @@ Chabot hosts <a href="https://chabotspace.org/events/free-telescope-viewings/" t
 
 <h3>Map</h3>
 
-<iframe
-  width="600"
-  height="450"
-  style="border:0"
+<iframe style="display:block;width:100%;height:100%;border:none;overflow:hidden;"
   loading="lazy"
   allowfullscreen
   referrerpolicy="no-referrer-when-downgrade"
