added to event details

--- a/event-details.html
+++ b/event-details.html
@@ -13,6 +13,9 @@ In the (unlikely) event of rain or other inclement weather, we will move everyth
 <br>
 <br>
 Chabot hosts <a href="https://chabotspace.org/events/free-telescope-viewings/" target="_blank">public telescope viewings</a> every Saturday evening until 10:30 pm. After dinner, you're welcome to visit the upstairs Observatory Deck to (hopefully!) see views of the Bay and stars.
+<br>
+<br>
+We are fortunate to already have everything we need for our home. Your warm wishes are present enough, but if you wish to give, we would be honored by a contribution to <a href="https://www.plannedparenthood.org/" target="_blank">Planned Parenthood</a> or your <a href="https://abortionfunds.org/funds/" target="_blank">local abortion fund</a>.
 
 <h3>Map</h3>
 
