--- a/rsvp.html
+++ b/rsvp.html
@@ -6,8 +6,9 @@ sidebar_link: True
 sidebar_sort_order: 4
 ---
 
-Please reply by June 5 and contact Hannah (hannah.klion [at] gmail.com) if you encounter any issues with the system.
+Please reply by June 5 and contact Hannah (hannah.klion [at] gmail.com) if you can't find your name in the system.
+If you don't see a full RSVP form below, you can find it <a href="https://hannah-allison.anrsvp.com">here</a>.
 
-<iframe style="display:block;width:100%;height:100%;border:none;overflow:hidden;"
+<iframe style="display:block;width:100%;height:500px;border:none;overflow:hidden;"
           src="https://hannah-allison.anrsvp.com/?embed=true">
 </iframe>
