update more event details

--- a/event-details.html
+++ b/event-details.html
@@ -6,13 +6,13 @@ sidebar_link: True
 sidebar_sort_order: 2
 ---
 
-All of the evening's events will take place in the outdoor courtyard of <a href="https://chabotspace.org/" target="_blank">Chabot Space and Science Center</a>, a science center and museum located in the Oakland hills. The ceremony will begin at 6:30 pm. Afterwards, please join us for a cocktail hour and reception. Cocktail attire is requested.
+All of the evening's events will take place in the outdoor courtyard of <a href="https://chabotspace.org/" target="_blank">Chabot Space and Science Center</a>, a science center and museum located in the Oakland hills. The ceremony will begin at 6:30 pm. Afterwards, please join us for a cocktail hour, dinner, and dancing. Cocktail attire is requested. The reception will end at eleven.
 <br>
 <br>
-In the (unlikely) event of rain or other inclement weather, we will move everything inside the museum. Chabot is 1,500 feet above sea level (and downtown Oakland), so its weather tends to be cooler and foggier than the flat portions of the city. The weather will cool as the evening goes on, so we recommend bringing an extra layer.
+In the (unlikely) event of rain or other inclement weather, we will move everything inside the museum. Chabot is 1,500 feet above sea level (and downtown Oakland), so its weather tends to be cooler and foggier than the flat portions of the city. You can check the current weather by clicking "Current Weather Summary" <a href="https://chabotspace.org/weather-station" target="_blank">here</a>. The weather will cool as the evening goes on, so we recommend bringing an extra layer. There will be a coat rack available. Heat lamps will also likely be available.
 <br>
 <br>
-Chabot hosts <a href="https://chabotspace.org/events/free-telescope-viewings/" target="_blank">public telescope viewings</a> every Saturday evening until 10:30 pm. After dinner, you're welcome to visit the upstairs Observatory Deck to (hopefully!) see views of the Bay and stars.
+Chabot hosts <a href="https://chabotspace.org/events/free-telescope-viewings/" target="_blank">public telescope viewings</a> every Saturday evening until 10:30 pm. After dinner and cake, you're welcome to visit the upstairs Observatory Deck to (hopefully!) see views of the Bay and stars.
 <br>
 <br>
 We are fortunate to already have everything we need for our home. Your warm wishes are present enough, but if you wish to give, we would be honored by a contribution to <a href="https://www.plannedparenthood.org/" target="_blank">Planned Parenthood</a> or your <a href="https://abortionfunds.org/funds/" target="_blank">local abortion fund</a>.
